rename for webpack. fix comma issue

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@st-operations/cjsx-loader",
+  "name": "st-cjsx-loader",
   "description": "React JSX support for Coffeescript",
   "keywords": [
     "coffeescript",
@@ -9,7 +9,7 @@
     "coffee-react"
   ],
   "author": "James Friend",
-  "version": "5.0.0",
+  "version": "5.0.2",
   "licenses": [
     {
       "type": "MIT",
@@ -39,5 +39,8 @@
     "coffee-script": "^1.9.1",
     "colors": "^0.6.2",
     "diff": "^1.0.8"
+  },
+  "dependencies": {
+    "st-cjsx-loader": "5.0.1"
   }
 }
